--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
+    "react-native-tab-view": "^3.3.4",
     "react-native-uuid": "^2.0.1",
-    "react-native-webview": "^11.25.1",
+    "react-native-webview": "11.23.1",
     "realm": "^11.0.0",
     "stitches-native": "^0.3.2",
     "yup": "^0.32.11"
